Fix scrollbar sadness

--- a/_sass/_documents.scss
+++ b/_sass/_documents.scss
@@ -6,8 +6,6 @@ div #doccontent {
     position: absolute;
     top:134px;
     left:250px;
-    right:0px;
-    bottom:0px;
     font-family: "Roboto";
     padding-left: 30px;
     padding-right: 30px;
